refactor: Rename project and update metadata
Updates the project name in `package.json` and `metadata.json` to reflect the new application name "Millorem les fitxes de la SA".

Also, refactors error messages and informational text within `App.tsx` for clarity and better user feedback during file loading and analysis.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assistent-pedagògic-nou-patufet",
+  "name": "millorem-les-fitxes-de-la-sa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
