--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "mammoth": "^1.6.0",
+    "pdfjs-dist": "^4.0.379"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
